--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,16 @@
             "role": "Developer"
         }
     ],
+
     "require": {
-        "illuminate/support": "^5.7",
+        "illuminate/support": "5.5.*|5.6.*|5.7.*|5.8.*",
         "php": "^7.1",
+        "doctrine/dbal": "^2.9",
         "laravel/socialite": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0",
-        "orchestra/testbench": "^3.7",
-        "doctrine/dbal": "^2.9"
+        "orchestra/testbench": "~3.5|~3.8"
     },
     "autoload": {
         "psr-4": {
